--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
