--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "sass": "^1.53.0",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.19",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
