--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-stripe-checkout": "^2.6.3",
     "sass": "^1.53.0",
     "socket.io-client": "^4.5.1",
-    "sweetalert2": "^11.4.19",
+    "sweetalert2": "^11.4.20",
+    "sweetalert2-react-content": "^4.2.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
